# tasmotaToInflux

./: .gitignore  LICENSE  Makefile  README.md  config.json  docker-compose.yml  example-config.json  pyproject.toml  requirements.txt  tasmotatoinflux.service
.github/actions/dependency-install/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: main.yml
develop/: simulator.py
scripts/ci/: format.sh  pylint.sh  unit_test.sh
src/tasmotatoinflux/: __init__.py  __main__.py  config-example.py  config.py  config_example.py  core.py  influxTemplates.py  points.py
src/tasmotatoinflux/config_wrapper/: types.py  wrapper.py
tasmota/: __init__.py  blitzwolf.py  ds18b20.py  tasmota.py
tasmotatoinflux/: core.py  influxTemplates.py
tests/hm/: testCore.py
